Using import-map to import three.js

--- a/Linear-Algebra/svd-existence-proof-3d.html
+++ b/Linear-Algebra/svd-existence-proof-3d.html
@@ -35,13 +35,14 @@
         </p>
         <p>
             To adjust the angles of the rotation basis in the left view port,
-            press the keys <kbd>1</kbd>, <kbd>2</kbd> or <kbd>3</kbd> and then
+            press the keys <kbd>r</kbd>, <kbd>g</kbd> or <kbd>b</kbd> and then
             start dragging inside that view port doing circular movements with
             the cursor. Small circular movements will rotate slowly, faster
             circular movements will rotate faster.
         </p>
     </div>
 </content>
+<script type="importmap" src="import-map.importmap"></script>
 <script type="module" src="./js/main.js"></script>
 </body>
 </html>
